# HyperNetX

./: .buildinfo  .coveragerc  .cz.toml  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.txt  Dockerfile  LICENSE.rst  LONG_DESCRIPTION.rst  MANIFEST.in  Makefile  README.md  README.rst  Ukraine_Property_Hypergraph.ipynb  active-dns-benchmark.ipynb  app.py  benchmarking.ipynb  build_docs.sh  cell_weights.ipynb  core.html  docker-compose.yml  eventcells_v2.csv  eventprops_v2.csv  genindex.html  glossary.html  hypconstructors.html  hypergraph101.html  index.html  install.html  is_connected.ipynb  license.html  (+19 more)
.doctrees/: core.doctree  glossary.doctree  hypconstructors.doctree  hypergraph101.doctree  index.doctree  install.doctree  license.doctree  modularity.doctree  publications.doctree  widget.doctree
.doctrees/algorithms/: algorithms.doctree  modules.doctree
.doctrees/classes/: classes.doctree  modules.doctree
.doctrees/drawing/: drawing.doctree  modules.doctree
.doctrees/overview/: index.doctree
.doctrees/reports/: modules.doctree  reports.doctree
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  cff.yml  ci.yml  documentation.yml  draft-pdf.yml  publish-to-dockerhub.yml  publish-to-pypi.yml
HNX_Paper/: paper.bib  paper.md  paper.tex
HypergraphApp/: app.py
Tests/: hypergraph_modularity_tests.ipynb
Tests/Data/: strict_1000_he.txt
_modules/: index.html
_modules/algorithms/: contagion.html  generative_models.html  homology_mod2.html  hypergraph_modularity.html  laplacians_clustering.html  s_centrality_measures.html
_modules/classes/: entity.html  entityset.html  (+2 more)
_sources/: hypergraph101.rst.txt  publications.rst.txt  widget.rst.txt
_static/: documentation_options.js
algorithms/: algorithms.html  modules.html
app/: app.py
cicd/: Dockerfile  cleanup.sh  generate-develop-pr.sh  generate-master-pr.sh  mirror-downstream-repos.sh  push-release-tag-ghub.sh  push-temp-branch-ghub.sh  run-deployment.sh
classes/: classes.html  modules.html
develop/: HYP-153.ipynb  HYP-50.ipynb
docs/: Makefile  make.bat  requirements.txt
drawing/: drawing.html  modules.html
hypernetx/: __init__.py  exception.py  hif.py  read_write.py
hypernetx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
overview/: index.html
reports/: modules.html  reports.html
simulations/: experiments.py
templates/: index.html  result.html
tutorials/: Demo 1 - HNXWidget.ipynb  Demo 1 - Hypergraph Properties.ipynb  Demo 1 - Properties and Widgets.ipynb  Demo 2 - HNX Constructor and More Widget Examples.ipynb  Demo 2 - HNXWidget.ipynb  Demo 2 - Properties and Widgets.ipynb  HNX Demo.ipynb  HNXStarter.ipynb  HarryPotterHypergraph.p  Incidence Visualization.ipynb  Tutorial 1 - HNX Basics.ipynb  Tutorial 10 - Contagion on Hypergraphs.ipynb  Tutorial 10 - Hypergraph Modularity and Clustering.ipynb  Tutorial 11 - Laplacians and Clustering.ipynb  Tutorial 11a - Laplacians and Clustering.ipynb  Tutorial 12 - Generative Models.ipynb  Tutorial 13 - Hypergraph Modularity and Clustering.ipynb  Tutorial 2 - Visualization Methods.ipynb  Tutorial 3 - LesMis Case Study.ipynb  Tutorial 4 - LesMis Visualizations-BookTour.ipynb  Tutorial 5 - Homology mod 2 for TriLoop Example.ipynb  Tutorial 5 - s-Centrality.ipynb  Tutorial 6 - Homology mod 2 for TriLoop Example.ipynb  Tutorial 6 - New static hypergraphs and NWHypergraph support using Pybind.ipynb  Tutorial 6 - New static hypergraphs-Copy1.ipynb  Tutorial 6 - New static hypergraphs.ipynb  Tutorial 6 - Static Hypergraphs and Entities-ShortVersion.ipynb  Tutorial 6 - Static Hypergraphs and Entities.ipynb  Tutorial 7 - Laplacians and Clustering.ipynb  Tutorial 7 - s-centrality metrics - old.ipynb  Tutorial 7 - s-centrality metrics-Copy1.ipynb  Tutorial 7 - s-centrality metrics.ipynb  Tutorial 7 - s-centrality.ipynb  Tutorial 8 - Generative Models.ipynb  Tutorial 8 - NWHy API.ipynb  Tutorial 8 - s-centrality.ipynb  Tutorial 9 - HNXWidget.ipynb  dogsAndcats.xls  harrypotter.py  hypergraph_modularity_tests.ipynb  (+4 more)
tutorials-jupyter/: Demo 1 - HNXWidget.ipynb  Demo 2 - HNX Constructor and More Widget Examples.ipynb  Tutorial 7 - Laplacians and Clustering.ipynb  Tutorial 8 - Generative Models.ipynb
untitled/: Copy of nwhy_python_api.xlsx  H_trans.p  HyperbioTutorial-StaticVersion.ipynb  HyperbioTutorial.ipynb  NoteOnEverythingCliff.md  NotesOnEverything.md  NotesOnEverything1.md  Toplex generator.ipynb  Tutorial 6 - New static hypergraphs and NWHypergraph support using Pybind.ipynb  Tutorial 6 - New static hypergraphs.ipynb  Tutorial 7 - s-centrality metrics.ipynb  Untitled.ipynb  dataframe.py  decorator notes.md  untitled_StaticEntity.py  untitled_harrypotter.py  untitled_static_Hypergraph.py
untitled-monthlies/: Hypernets_FY21_SOW_201208_caj_bp.docx  Hypernets_FY21_SOW_201208_submitted.docx  NovemberReport.docx
untitled1/: Demo of StaticEntity and static Hypergraph in HNX and initial NWHy interface.ipynb  Dynamic Hypergraph Methods.ipynb  Hypergraphs for Static Data.ipynb  Kickoff2021  README.txt  SOW Tony Liu.docx  SOW_Tony_Liu1[2].docx  StaticEntitySet methods.ipynb  StaticEntitySet-Tensor+Labels.ipynb  StaticHypergraph - HarryPotter data - old.ipynb  StaticHypergraph - HarryPotter data-Hypergraph.ipynb  StaticHypergraph - HarryPotter data-SparseVersion.ipynb  StaticHypergraph - HarryPotter data.ipynb  StaticHypergraphMethods.ipynb  Tests-Copy1.ipynb  Tests.ipynb  Tutorial 1 - HNX Basics-Copy1.ipynb  Untitled-NumpyStaticHypergraphs.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled_Static_Tests.ipynb  debuggingHypergraph92720.ipynb  harrypotter.py  homology update.ipynb  hrmat connected_components.ipynb  hrmat-experiments.ipynb  kickofFy21.md  notes.pptx  performance test.ipynb  restats  s-width.ipynb  sample.csv  static_entity.py  static_entity1.py  static_tests.py  tests2.ipynb  tut6.ipynb  universalClassDecorator.txt  untitiled_discogsex.json  (+8 more)
vis_develop/: HYP-138.ipynb
(+304 files in other folders)
