[tool.poetry]
name = "hypernetx"
version = "2.3.8"
description = "HyperNetX is a Python library for the creation and study of hypergraphs."
authors = ["Brenda Praggastis <Brenda.Praggastis@pnnl.gov>", "Dustin Arendt <dustin.arendt@pnnl.gov>",
    "Sinan Aksoy <sinan.aksoy@pnnl.gov>", "Emilie Purvine <Emilie.Purvine@pnnl.gov>",
    "Cliff Joslyn <Cliff.Joslyn@pnnl.gov>"]
license = "3-Clause BSD license"
readme = "README.md"
homepage = "https://pypi.org/project/hypernetx/"
repository = "https://github.com/pnnl/HyperNetX"
documentation = "https://hypernetx.readthedocs.io/en/latest/"
keywords = ["hypergraphs"]
packages = [
    {include = "hypernetx"},
    {include = "hypernetx/algorithms"},
    {include = "hypernetx/classes"},
    {include = "hypernetx/drawing"},
    {include = "hypernetx/reports"},
    {include = "hypernetx/utils"},
    {include = "hypernetx/utils/toys"},
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0.0"
networkx = ">=3.3"
pandas = ">=2.2.2"
scikit-learn = ">=1.4.2"
celluloid = ">=0.2.0"
igraph = ">=0.11.4"
decorator = ">=5.1.1"
scipy = ">=1.13"

[tool.poetry.group.widget]
optional = true
[tool.poetry.group.widget.dependencies]
jupyter-contrib-nbextensions = "^0.7.0"
ipywidgets = "7.7.5"
notebook = "6.4.12"
traitlets = "5.9.0"
concepts = "^0.9.2"
jupyter-dash = "^0.4.2"
dash = "^2.16.1"

[tool.poetry.group.tutorials]
optional = true
[tool.poetry.group.tutorials.dependencies]
jupyter = "^1.0.0"

[tool.poetry.group.test]
optional = true
[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.5.0"
pytest-env = "^1.1.3"
tox = "^4.14.2"
nbmake = "^1.5.3"

[tool.poetry.group.lint]
optional = true
[tool.poetry.group.lint.dependencies]
pylint = "^3.1.0"
black = "^24.3.0"
flake8 = {version = "^7.0.0", python = "^3.9"}
pylint-exit = "^1.2.0"
pre-commit = {version = "^3.7.0", python = "^3.9"}
mypy = "^1.9.0"

[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
sphinx = {version = "^7.2.6", python = "^3.9"}
sphinx-rtd-theme = "^2.0.0"
sphinx-autobuild = {version = "^2024.2.4", python = "^3.9"}
sphinx-copybutton = "^0.5.2"

[tool.poetry.group.release]
optional = true
[tool.poetry.group.release.dependencies]
commitizen = {version = "^3.20.0", optional = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = [
    "tests"
]
