[bumpversion]
current_version = 1.2.5
commit = True
tag = True
allow_dirty = True

[bumpversion:file:docs/source/conf.py]

[bumpversion:file:hypernetx/__init__.py]

[bumpversion:file:setup.py]

[mypy-setup.py]
ignore_errors = True

[mypy]
exclude = (?x)(
    tests/    # test directory
  )
pretty = True

# Per-module options:
[mypy-igraph]
ignore_missing_imports = True

[mypy-decorator]
ignore_missing_imports = True

[mypy-celluloid]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-networkx.*]
ignore_missing_imports = True

[mypy-sklearn.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-nwhy]
ignore_missing_imports = True

[mypy-pandas]
ignore_missing_imports = True

[metadata]
python_requires = >=3.8,<3.12
description_file = README.md
name = hypernetx
author = Brenda Praggastis, Dustin Arendt, Sinan Aksoy, Emilie Purvine, Cliff Joslyn
author_email = hypernetx@pnnl.gov
description = HyperNetX is a Python library for the creation and study of hypergraphs.
url = https://github.com/pnnl/HyperNetX
long_description = file: LONG_DESCRIPTION.rst
long_description_content_type = text/x-rst
license = 3-Clause BSD license
license_files =
	LICENSE.rst

[options]
packages =
	hypernetx
	hypernetx.algorithms
	hypernetx.classes
	hypernetx.drawing
	hypernetx.reports
	hypernetx.utils
	hypernetx.utils.toys
install_requires =
	networkx>=2.2,<3.0
	numpy>=1.24.0,<2.0
	scipy>=1.1.0,<2.0
	matplotlib>3.0
	scikit-learn>=0.20.0
	pandas>=1.5.3
	decorator>=5.1.1

[options.extras_require]
releases =
	bump2version>=1.0.1
auto-testing =
    tox>=4.4.0
    pre-commit>=2.20.0
    pylint>=2.15.3
    pylint-exit>=1.2.0
    black>=22.8.0
	nbmake>=1.3.4
testing =
	pytest>=4.0
	coverage>=6.5.0
	celluloid>=0.2.0
	igraph>=0.9.11
	nbmake>=1.3.4
tutorials =
	jupyter>=1.0
	python-igraph>=0.9.6
	celluloid>=0.2.0
 	partition-igraph>=0.0.4
documentation =
	sphinx>=1.8.2
	nb2plots>=0.6
	sphinx-rtd-theme>=0.4.2
	sphinx-autobuild>=2021.3.14
packaging =
	build>=0.8.0
	twine>=4.0.1
	setuptools>=65.3.0
	tox>=4.4.0
all =
	sphinx>=1.8.2
	nb2plots>=0.6
	sphinx-rtd-theme>=0.4.2
	pytest>=4.0
	coverage>=6.5.0
	jupyter>=1.0
	python-igraph>=0.9.6
	partition-igraph>=0.0.4
	celluloid>=0.2.0
	igraph>=0.9.11
