[mypy-setup.py]
ignore_errors = True

[mypy]
exclude = (?x)(
    tests/    # test directory
  )
pretty = True

# Per-module options:
[mypy-igraph]
ignore_missing_imports = True

[mypy-decorator]
ignore_missing_imports = True

[mypy-celluloid]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-networkx.*]
ignore_missing_imports = True

[mypy-sklearn.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-nwhy]
ignore_missing_imports = True

[mypy-pandas]
ignore_missing_imports = True

[metadata]
python_requires = >=3.8,<3.12
description_file = README.md
name = hypernetx
author = Brenda Praggastis, Dustin Arendt, Sinan Aksoy, Emilie Purvine, Cliff Joslyn
author_email = hypernetx@pnnl.gov
description = HyperNetX is a Python library for the creation and study of hypergraphs.
url = https://github.com/pnnl/HyperNetX
long_description = file: LONG_DESCRIPTION.rst
long_description_content_type = text/x-rst
license = 3-Clause BSD license
license_files =
	LICENSE.rst

[options]
include_package_data=True
packages =
	hypernetx
	hypernetx.algorithms
	hypernetx.classes
	hypernetx.drawing
	hypernetx.reports
	hypernetx.utils
	hypernetx.utils.toys
install_requires =
	networkx>=2.2,<3.0
	numpy>=1.24.0,<2.0
	scipy>=1.1.0,<2.0
	matplotlib>3.0
	scikit-learn>=0.20.0
	pandas>=1.5.3
	decorator>=5.1.1
	typing-extensions>=4.8.0

[options.extras_require]
releases =
	commitizen>=3.2.1
testing =
	pytest>=7.2.2
	pytest-cov>=4.1.0
	pytest-lazy-fixture>=0.6.3
	pytest-xdist>=3.2.1
	pytest-env
	tox>=4.4.11
	nbmake>=1.4.1
	pre-commit>=3.2.2
    pylint>=2.17.2
    pylint-exit>=1.2.0
    black>=23.3.0
	celluloid>=0.2.0
	igraph>=0.10.4
tutorials =
	jupyter>=1.0
	igraph>=0.10.4
	partition-igraph>=0.0.6
	celluloid>=0.2.0
widget =
	hnxwidget>=0.1.1b3
	jupyter-contrib-nbextensions>=0.7.0
	jupyter-nbextensions-configurator>=0.6.2
documentation =
	sphinx<7
	nb2plots>=0.6.1
	sphinx-rtd-theme>=1.2.1
	sphinx-autobuild>=2021.3.14
	sphinx-copybutton>=0.5.1
packaging =
	build>=0.10.0
	twine>=4.0.2
	setuptools>=67.6.1
	tox>=4.4.11
all =
	sphinx>=6.2.1
	nb2plots>=0.6.1
	sphinx-rtd-theme>=1.2.0
	sphinx-autobuild>=2021.3.14
	sphinx-copybutton>=0.5.1
	pytest>=7.2.2
	pytest-cov>=4.1.0
	jupyter>=1.0
	igraph>=0.10.4
	partition-igraph>=0.0.6
	celluloid>=0.2.0
